force-app/main/default/objects/Case_Transfer_Field_Copy__c/Case_Transfer_Field_Copy__c.object-meta.xml
<CustomObject>
    <description>When a case is transferred, these are values to put into fields on the new case.</description>
    <label>Case Transfer Field Copy</label>
    <nameField>
        <displayFormat>Field-Copy-{0000}</displayFormat>
        <label>Field Copy Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Transfer Field Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>