force-app/main/default/objects/Case_Transfer_Field_Copy__c/fields/Case_Transfer_Routing__c.field-meta.xml
<CustomField>
    <fullName>Case_Transfer_Routing__c</fullName>
    <label>Case Transfer Routing</label>
    <referenceTo>Case_Transfer_Routing__c</referenceTo>
    <relationshipLabel>Case Transfer Field Copies</relationshipLabel>
    <relationshipName>Case_Transfer_Field_Copies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>