force-app/main/default/objects/Case_Transfer_Field_Copy__c/fields/Dest_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Dest_Field_API_Name__c</fullName>
    <description>The API name of the field you want to put the new value into.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the field you want to put the new value into.</inlineHelpText>
    <label>Dest Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>