force-app/main/default/objects/Case_Transfer_Field_Copy__c/fields/Dest_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Dest_Field_Value__c</fullName>
    <description>If a static value will be put in the destination field, store the value here.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If a static value will be put in the destination field, store the value here.</inlineHelpText>
    <label>Dest Field Value</label>
    <length>120</length>
    <type>Text</type>
</CustomField>