force-app/main/default/objects/Case_Transfer_Field_Copy__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this record active? If not, it will not be used.</description>
    <inlineHelpText>Is this record active? If not, it will not be used.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>