force-app/main/default/objects/Case_Transfer_Field_Copy__c/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <description>If you are going to be copying a value from a another record, enter the API name of the field here (example copying from source case to dest case).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If you are going to be copying a value from a another record, enter the API name of the field here (example copying from source case to dest case).</inlineHelpText>
    <label>Source Field API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>