force-app/main/default/objects/Case_Transfer_Field_Copy__c/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <description>The API name of the source object if copying from one field to another.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the source object if copying from one field to another.</inlineHelpText>
    <label>Source Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>